--- a/Main Content/start_page.html
+++ b/Main Content/start_page.html
@@ -3,7 +3,7 @@
 <head>
     <link rel="stylesheet" href="animatStyle.css">
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Space Mono">
+    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Space Mono"><link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <script src="https://s.codepen.io/assets/libs/modernizr.js" type="text/javascript"></script>
 
     <style type="text/css">
@@ -15,12 +15,6 @@ html {
 }
 
 /*https://static1.squarespace.com/static/5438bd1be4b0446f6692b906/55ffa78ce4b0134b934236f8/55ffa7bee4b03624c517d55f/1442818001817/Goo.gif?format=750w*/
-$yellow:  #add356;
-$teal:    #00dfa6;
-$lorange: #ffcb52;
-$dorange: #ff451f;
-$blue:    #3dade9;
-$purple:  #bf2fcb;
 .text {
   fill: black;
   stroke-width: 6.8;
@@ -100,14 +94,14 @@ button{
   border-color: #d50000 ;
   border-width: 20px;
     text-decoration: none;
-    color: #d50000; 
-    font-family: 'Space Mono', sans-serif;
+    color: #d50000;
+	font-family: 'Raleway', sans-serif;
     color: 5px solid #d50000;
     padding: 7% 1%;
     padding-bottom: 8%;
     text-align: center;
     display: inline-block;
-    font-size: 28px;
+    font-size: 33px;
     margin: 27% 19%;
     text-align: center;
     border-radius:500px;
